MDEV-3819 missing constraints for spatial column types.     Checks added to return and error when inappropriate     geometry type is stored in a field.